Updated dependencies and model (deletes)
