# lib/app.js
@@ -181,6 +181,28 @@ var startServer = function startServer(callback) {
       controllerMethod: festivalsController.updateFestivalV1
     });
 
+    routes.delete.push({
+      options: {
+        path: '/api/festivals/:id', version: '1.0.0'
+      },
+      authMethod: function deleteFestivalsAuthHandler(req, res, next) {
+
+        try {
+          oauth(req)
+            .scope('festivals:delete')
+            .client('client')
+            .user();
+        }
+        catch (e) {
+          return next(new UnauthorizedError('Unauthorized error: ' + e.message));
+        }
+
+        return next();
+      },
+      cache: noCacheHandler,
+      controllerMethod: festivalsController.deleteFestivalV1
+    });
+
     routes.get.push({
       options: {
         path: '/api/festivals/:id/categories', version: '1.0.0'
@@ -267,6 +289,28 @@ var startServer = function startServer(callback) {
       },
       cache: noCacheHandler,
       controllerMethod: categoriesController.updateFestivalCategoryV1
+    });
+
+    routes.delete.push({
+      options: {
+        path: '/api/festivals/:id/categories/:category.id', version: '1.0.0'
+      },
+      authMethod: function deleteCategoriesAuthHandler(req, res, next) {
+
+        try {
+          oauth(req)
+            .scope('categories:delete')
+            .client('client')
+            .user();
+        }
+        catch (e) {
+          return next(new UnauthorizedError('Unauthorized error: ' + e.message));
+        }
+
+        return next();
+      },
+      cache: noCacheHandler,
+      controllerMethod: categoriesController.deleteFestivalCategoryV1
     });
 
     routes.get.push({
@@ -357,6 +401,28 @@ var startServer = function startServer(callback) {
       controllerMethod: eventsController.updateFestivalEventV1
     });
 
+    routes.delete.push({
+      options: {
+        path: '/api/festivals/:id/events/:event.id', version: '1.0.0'
+      },
+      authMethod: function deleteEventsAuthHandler(req, res, next) {
+
+        try {
+          oauth(req)
+            .scope('events:delete')
+            .client('client')
+            .user();
+        }
+        catch (e) {
+          return next(new UnauthorizedError('Unauthorized error: ' + e.message));
+        }
+
+        return next();
+      },
+      cache: noCacheHandler,
+      controllerMethod: eventsController.deleteFestivalEventV1
+    });
+
     routes.get.push({
       options: {
         path: '/api/festivals/:id/places', version: '1.0.0'
@@ -443,6 +509,28 @@ var startServer = function startServer(callback) {
       },
       cache: noCacheHandler,
       controllerMethod: placesController.updateFestivalPlaceV1
+    });
+
+    routes.delete.push({
+      options: {
+        path: '/api/festivals/:id/places/:place.id', version: '1.0.0'
+      },
+      authMethod: function deletePlacesAuthHandler(req, res, next) {
+
+        try {
+          oauth(req)
+            .scope('places:delete')
+            .client('client')
+            .user();
+        }
+        catch (e) {
+          return next(new UnauthorizedError('Unauthorized error: ' + e.message));
+        }
+
+        return next();
+      },
+      cache: noCacheHandler,
+      controllerMethod: placesController.deleteFestivalPlaceV1
     });
 
     var server = myRestifyApi.createServer(routes, errorHandlers, options);
