# lib/controller/categories.js
@@ -136,9 +136,33 @@ var getFestivalCategoryV1 = function getFestivalCategoryV1(req, res, next) {
   });
 };
 
+var deleteFestivalCategoryV1 = function deleteFestivalCategoryV1(req, res, next) {
+  try {
+    assert.object(req.params, 'params');
+    assert.string(req.params.id, 'id');
+    assert.string(req.params['category.id'], 'category.id');
+  }
+  catch (e) {
+    logger.warn(e);
+    return next(new BadRequestError(e.message));
+  }
+
+  var id = req.params.id;
+  var cid = req.params['category.id'];
+
+  festivals.deleteFestivalCategory(id, cid, options, function (err, result) {
+
+    next.ifError(err);
+
+    res.send(204, '');
+    return next();
+  });
+};
+
 module.exports = {
   createFestivalCategoryV1: createFestivalCategoryV1,
   updateFestivalCategoryV1: updateFestivalCategoryV1,
   getFestivalCategoriesV1: getFestivalCategoriesV1,
-  getFestivalCategoryV1: getFestivalCategoryV1
+  getFestivalCategoryV1: getFestivalCategoryV1,
+  deleteFestivalCategoryV1: deleteFestivalCategoryV1
 };
