# lib/controller/events.js
@@ -123,7 +123,7 @@ var getFestivalEventsV1 = function getFestivalEventsV1(req, res, next) {
 
     next.ifError(err);
 
-    var events =  data.events.map(function (event) {
+    var events = data.events.map(function (event) {
       return eventBuilders.buildEventResponse(event);
     });
 
@@ -165,9 +165,32 @@ var getFestivalEventV1 = function getFestivalEventV1(req, res, next) {
   });
 };
 
+var deleteFestivalEventV1 = function deleteFestivalEventV1(req, res, next) {
+  try {
+    assert.object(req.params, 'params');
+    assert.string(req.params.id, 'id');
+    assert.string(req.params['event.id'], 'event.id');
+  }
+  catch (e) {
+    logger.warn(e);
+    return next(new BadRequestError(e.message));
+  }
+
+  var id = req.params.id;
+  var eid = req.params['event.id'];
+
+  festivals.deleteFestivalEvent(id, eid, options, function (err, result) {
+
+    next.ifError(err);
+    res.send(204, '');
+    return next();
+  });
+};
+
 module.exports = {
   createFestivalEventV1: createFestivalEventV1,
   updateFestivalEventV1: updateFestivalEventV1,
   getFestivalEventsV1: getFestivalEventsV1,
-  getFestivalEventV1: getFestivalEventV1
+  getFestivalEventV1: getFestivalEventV1,
+  deleteFestivalEventV1: deleteFestivalEventV1
 };
