# lib/controller/festivals.js
@@ -130,9 +130,32 @@ var getFestivalV1 = function getFestivalV1(req, res, next) {
   });
 };
 
+var deleteFestivalV1 = function deleteFestivalV1(req, res, next) {
+
+  try {
+    assert.object(req.params, 'params');
+    assert.string(req.params.id, 'id');
+  }
+  catch (e) {
+    logger.warn(e);
+    return next(new BadRequestError(e.message));
+  }
+
+  var id = req.params.id;
+
+  festivals.deleteFestival(id, options, function (err, result) {
+
+    next.ifError(err);
+
+    res.send(204, '');
+    return next();
+  });
+};
+
 module.exports = {
   createFestivalV1: createFestivalV1,
   updateFestivalV1: updateFestivalV1,
   getFestivalsV1: getFestivalsV1,
-  getFestivalV1: getFestivalV1
+  getFestivalV1: getFestivalV1,
+  deleteFestivalV1: deleteFestivalV1
 };
