# lib/controller/places.js
@@ -136,9 +136,33 @@ var getFestivalPlaceV1 = function getFestivalPlaceV1(req, res, next) {
   });
 };
 
+var deleteFestivalPlaceV1 = function deleteFestivalPlaceV1(req, res, next) {
+  try {
+    assert.object(req.params, 'params');
+    assert.string(req.params.id, 'id');
+    assert.string(req.params['place.id'], 'place.id');
+  }
+  catch (e) {
+    logger.warn(e);
+    return next(new BadRequestError(e.message));
+  }
+
+  var id = req.params.id;
+  var pid = req.params['place.id'];
+
+  festivals.deleteFestivalPlace(id, pid, options, function (err, result) {
+
+    next.ifError(err);
+
+    res.send(204, '');
+    return next();
+  });
+};
+
 module.exports = {
   createFestivalPlaceV1: createFestivalPlaceV1,
   updateFestivalPlaceV1: updateFestivalPlaceV1,
   getFestivalPlacesV1: getFestivalPlacesV1,
-  getFestivalPlaceV1: getFestivalPlaceV1
+  getFestivalPlaceV1: getFestivalPlaceV1,
+  deleteFestivalPlaceV1: deleteFestivalPlaceV1
 };
