# lib/festivals.js
@@ -62,6 +62,26 @@ var getFestival = function getFestival(id, options, callback) {
   }
 };
 
+var deleteFestival = function deleteFestival(id, options, callback) {
+  logger.debug('deleteFestival: ', id);
+
+  try {
+    provider.deleteFestival(id, function (err, festival) {
+
+      if (err) {
+        logger.debug('Unable to delete festival: ', err);
+        return callback(err);
+      }
+
+      return callback(null, festival);
+    });
+  }
+  catch (e) {
+    logger.warn('unable to delete festival for id: ', id, e);
+    return callback(e);
+  }
+};
+
 var getFestivals = function getFestivals(searchRequest, options, callback) {
   logger.debug('getFestivals: ', searchRequest);
 
@@ -138,6 +158,26 @@ var getFestivalEvent = function getFestivalEvent(festivalId, eventId, options, c
   }
   catch (e) {
     logger.warn('unable to get festival event for id: ', festivalId, eventId, e);
+    return callback(e);
+  }
+};
+
+var deleteFestivalEvent = function deleteFestivalEvent(festivalId, eventId, options, callback) {
+  logger.debug('deleteFestivalEvent: ', festivalId, eventId);
+
+  try {
+    provider.deleteFestivalEvent(festivalId, eventId, function (err, event) {
+
+      if (err) {
+        logger.debug('Unable to delete festival event: ', err);
+        return callback(err);
+      }
+
+      return callback(null, event);
+    });
+  }
+  catch (e) {
+    logger.warn('unable to delete festival event for id: ', festivalId, eventId, e);
     return callback(e);
   }
 };
@@ -222,6 +262,26 @@ var getFestivalPlace = function getFestivalPlace(festivalId, placeId, options, c
   }
 };
 
+var deleteFestivalPlace = function deleteFestivalPlace(festivalId, placeId, options, callback) {
+  logger.debug('deleteFestivalPlace: ', festivalId, placeId);
+
+  try {
+    provider.deleteFestivalPlace(festivalId, placeId, function (err, place) {
+
+      if (err) {
+        logger.debug('Unable to delete festival place: ', err);
+        return callback(err);
+      }
+
+      return callback(null, place);
+    });
+  }
+  catch (e) {
+    logger.warn('unable to delete festival place for id: ', festivalId, placeId, e);
+    return callback(e);
+  }
+};
+
 var getFestivalPlaces = function getFestivalPlaces(id, searchRequest, options, callback) {
   logger.debug('getFestivalPlaces: ', id, searchRequest);
 
@@ -302,6 +362,26 @@ var getFestivalCategory = function getFestivalCategory(festivalId, categoryId, o
   }
 };
 
+var deleteFestivalCategory = function deleteFestivalCategory(festivalId, categoryId, options, callback) {
+  logger.debug('deleteFestivalCategory: ', festivalId, categoryId);
+
+  try {
+      provider.deleteFestivalCategory(festivalId, categoryId, function (err, category) {
+
+      if (err) {
+        logger.debug('Unable to delete festival category: ', err);
+        return callback(err);
+      }
+
+      return callback(null, category);
+    });
+  }
+  catch (e) {
+    logger.warn('unable to delete festival category for id: ', festivalId, categoryId, e);
+    return callback(e);
+  }
+};
+
 var getFestivalCategories = function getFestivalCategories(id, searchRequest, options, callback) {
   logger.debug('getFestivalCategories: ', id, searchRequest);
 
@@ -328,16 +408,20 @@ module.exports = {
   updateFestival: updateFestival,
   getFestival: getFestival,
   getFestivals: getFestivals,
+  deleteFestival: deleteFestival,
   createFestivalEvent: createFestivalEvent,
   updateFestivalEvent: updateFestivalEvent,
   getFestivalEvent: getFestivalEvent,
   getFestivalEvents: getFestivalEvents,
+  deleteFestivalEvent: deleteFestivalEvent,
   createFestivalPlace: createFestivalPlace,
   updateFestivalPlace: updateFestivalPlace,
   getFestivalPlace: getFestivalPlace,
   getFestivalPlaces: getFestivalPlaces,
+  deleteFestivalPlace: deleteFestivalPlace,
   createFestivalCategory: createFestivalCategory,
   updateFestivalCategory: updateFestivalCategory,
   getFestivalCategory: getFestivalCategory,
-  getFestivalCategories: getFestivalCategories
+  getFestivalCategories: getFestivalCategories,
+  deleteFestivalCategory: deleteFestivalCategory
 };
