# public/api-docs/swagger.yaml
@@ -129,6 +129,32 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/FestivalResponse"
+        "404":
+          description: Festival not found
+    delete:
+      tags:
+        - festivals
+      summary: Delete festival
+      description: Delete festival
+      operationId: deleteFestival
+      security:
+        - oauth2token:
+          - festivals:delete
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+      responses:
+        "204":
+          description: successful operation
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not found
     put:
       tags:
         - festivals
@@ -165,6 +191,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Festival not found
         "406":
           description: The request you made is not acceptable
         "422":
@@ -233,6 +261,8 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/EventsCollectionResponse"
+        "404":
+          description: Not found
     post:
       tags:
         - events
@@ -269,6 +299,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Festival not found
         "406":
           description: The request you made is not acceptable
         "422":
@@ -301,6 +333,35 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/EventResponse"
+    delete:
+      tags:
+        - events
+      summary: Delete festival event
+      description: Delete festival events
+      operationId: deleteFestivalEvent
+      security:
+        - oauth2token:
+          - events:delete
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: event.id
+          in: path
+          description: Event id
+          required: true
+          type: string
+      responses:
+        "204":
+          description: successful operation
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not found
     put:
       tags:
         - events
@@ -395,6 +456,8 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/CategoriesCollectionResponse"
+        "404":
+          description: Festival not found
     post:
       tags:
         - categories
@@ -431,6 +494,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Festival not found
         "406":
           description: The request you made is not acceptable
         "422":
@@ -463,6 +528,37 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/CategoryResponse"
+        "404":
+          description: Not found
+    delete:
+      tags:
+        - categories
+      summary: Delete festival category
+      description: Delete festival category
+      operationId: deleteFestivalCategory
+      security:
+        - oauth2token:
+          - categories:delete
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: category.id
+          in: path
+          description: Category id
+          required: true
+          type: string
+      responses:
+        "204":
+          description: successful operation
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not found
     put:
       tags:
         - categories
@@ -504,6 +600,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Not found
         "406":
           description: The request you made is not acceptable
         "422":
@@ -557,6 +655,8 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/PlacesCollectionResponse"
+        "404":
+          description: Festival not found
     post:
       tags:
         - places
@@ -593,6 +693,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Not found
         "406":
           description: The request you made is not acceptable
         "422":
@@ -625,6 +727,37 @@ paths:
           description: successful operation
           schema:
             $ref: "#/definitions/PlaceResponse"
+        "404":
+          description: Festival not found
+    delete:
+      tags:
+        - places
+      summary: Delete festival place
+      description: Delete festival place
+      operationId: deleteFestivalPlace
+      security:
+        - oauth2token:
+          - places:delete
+      parameters:
+        - name: id
+          in: path
+          description: Festival id
+          required: true
+          type: string
+        - name: place.id
+          in: path
+          description: Place id
+          required: true
+          type: string
+      responses:
+        "204":
+          description: successful operation
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not found
     put:
       tags:
         - places
@@ -666,6 +799,8 @@ paths:
           description: Unauthorized
         "403":
           description: Forbidden
+        "404":
+          description: Not found
         "406":
           description: The request you made is not acceptable
         "422":
